--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -3,6 +3,9 @@
 		"close": "Close",
 		"logo": "$name logo"
 	},
+	"hero": {
+		"use_with_caution": "Learn more about this alpha version. Use with caution."
+	},
 	"settings": {
 		"title": "Settings",
 		"principal": "Your Principal",
