--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -25,7 +25,7 @@
 	},
 	"sign_in": {
 		"title": "A browser-based Ethereum wallet secured by the Internet Computer and supporting networked-custody",
-		"description": "{OISY_NAME} provides a seamless on-chain experience to manage your Ethereum assets. Using native web technologies and advanced cryptography, {OISY_NAME} eliminates the need for browser extensions or mobile apps.",
+		"description": "$oisy_name provides a seamless on-chain experience to manage your Ethereum assets. Using native web technologies and advanced cryptography, $oisy_name eliminates the need for browser extensions or mobile apps.",
 		"connect_with": "Connect with"
 	},
 	"wallet": {
@@ -49,13 +49,13 @@
 			"title": "Settings",
 			"principal": "Your Principal",
 			"principal_copied": "Principal copied to clipboard",
-			"principal_description": "Your ID for the {OISY_NAME}. Created by your Internet Identity.",
+			"principal_description": "Your ID for the $oisy_name. Created by your Internet Identity.",
 			"session": "Your session expires in",
 			"session_description": "All sessions last 1 hour. After 1 hour, you will need to authenticate again with Internet Identity.",
 			"testnets": "Show test networks",
 			"testnets_description": "Display the test networks (Sepolia) and twin tokens on testnets (ckTESTBTC and ckSepolia).",
 			"tokens": "Tokens",
-			"tokens_description": "The list of tokens currently supported by your {OISY_NAME}.",
+			"tokens_description": "The list of tokens currently supported by your $oisy_name.",
 			"decimals": "Decimals"
 		},
 		"alt": {
