--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -95,6 +95,9 @@
 		"placeholder": {
 			"enter_contract_address": "Enter an ERC20 contract address"
 		},
+		"warning": {
+			"trust_token": "Make sure that you trust the token that you are adding. If the token you are adding is controlled by a malicious party, they could try and scam you e.g. by making you believe you received a significant amount of tokens in order to trick you into sending them tokens in return or perform other undesired actions. Learn more about scams and security risks e.g. <a rel=\"noreferrer noopener\" target=\"_blank\" href=\"https://support.metamask.io/hc/en-us/articles/4403988839451\">here</a>."
+		},
 		"error": {
 			"invalid_contract_address": "Contract address is invalid.",
 			"no_metadata": "No metadata were fetched for the contract address.",
