feat: icp send i18n (#982)
* feat: icp send i18n

* feat: send i18n

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -144,11 +144,36 @@
 			"source": "Source",
 			"balance": "Balance",
 			"review": "Review",
+			"approving": "Approving...",
+			"refreshing_ui": "Refreshing UI",
 			"sending": "Sending...",
-			"signing": "Signing..."
+			"signing": "Signing...",
+			"network": "Network",
+			"source_network": "Source network",
+			"destination_network": "Destination network",
+			"initializing_transaction": "Initializing transaction"
+		},
+		"placeholder": {
+			"enter_eth_address": "Enter public address (0x)",
+			"enter_recipient_address": "Enter recipient address",
+			"enter_wallet_address": "Enter wallet address"
+		},
+		"info": {
+			"ckbtc_certified": "Please wait until the ckBTC parameters have been certified.",
+			"cketh_certified": "Please wait until the ckETH parameters have been certified."
 		},
 		"assertion": {
-			"invalid_destination_address": "Invalid destination address"
+			"invalid_destination_address": "Invalid destination address",
+			"insufficient_funds": "Insufficient funds.",
+			"unknown_minimum_ckbtc_amount": "The minimum amount of ckBTC required for converting to BTC is unknown.",
+			"unknown_minimum_cketh_amount": "The minimum amount of ckETH required for converting to ETH is unknown.",
+			"minimum_ckbtc_amount": "The amount falls below the minimum of $amount ckBTC required for converting to BTC.",
+			"minimum_cketh_amount": "The amount falls below the minimum withdrawal amount of $amount $symbol.",
+			"destination_address_invalid": "Destination address is invalid.",
+			"amount_invalid": "Amount is invalid."
+		},
+		"error": {
+			"unexpected": "Something went wrong while sending the transaction."
 		}
 	},
 	"convert": {
