--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -335,5 +335,17 @@
 			"title": "Transactions",
 			"no_transactions": "You have no transactions."
 		}
+	},
+	"env": {
+		"error": {
+			"no_alchemy_config": "No Alchemy config for network $network",
+			"no_alchemy_provider": "No Alchemy provider for network $network",
+			"no_alchemy_erc20_provider": "No Alchemy ERC20 provider for network $network",
+			"no_etherscan_provider": "No Alchemy provider for network $network",
+			"no_infura_provider": "No Infura provider for network $network",
+			"no_infura_cketh_provider": "No Infura CkETH provider for network $network",
+			"no_infura_erc20_provider": "No Infura ERC20 provider for network $network",
+			"no_infura_erc20_icp_provider": "No Infura ERC20 Icp provider for network $network"
+		}
 	}
 }
