--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -2,7 +2,6 @@
 	"core": {
 		"text": {
 			"test_banner": "For testing purposes only!",
-			"logout": "Logout",
 			"cancel": "Cancel",
 			"next": "Next",
 			"save": "Save",
@@ -33,10 +32,16 @@
 			"menu": "Your wallet address, settings, sign-out and external links"
 		}
 	},
-	"sign_in": {
-		"title": "A browser-based Ethereum wallet secured by the Internet Computer and supporting networked-custody",
-		"description": "$oisy_name provides a seamless on-chain experience to manage your Ethereum assets. Using native web technologies and advanced cryptography, $oisy_name eliminates the need for browser extensions or mobile apps.",
-		"connect_with": "Connect with"
+	"auth": {
+		"text": {
+			"title": "A browser-based Ethereum wallet secured by the Internet Computer and supporting networked-custody",
+			"description": "$oisy_name provides a seamless on-chain experience to manage your Ethereum assets. Using native web technologies and advanced cryptography, $oisy_name eliminates the need for browser extensions or mobile apps.",
+			"connect_with": "Connect with",
+			"logout": "Logout"
+		},
+		"error": {
+			"no_internet_identity": "No internet identity."
+		}
 	},
 	"wallet": {
 		"text": {
